# IQmol

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  README  configure  installer_config.xml  installer_config_linux.xml  installer_config_windows.xml
src/: AboutDialog.h  AboutDialog.ui  AmbientOcclusionEngine.C  AmbientOcclusionEngine.h  Animator.C  Animator.h  AtomLayer.C  AtomLayer.h  AtomicDensity.C  AtomicDensity.h  AtomicDensityData.h  AxesLayer.C  AxesLayer.h  BackgroundConfigurator.C  BackgroundConfigurator.h  BackgroundLayer.C  BackgroundLayer.h  BaseConfigurator.h  BaseHandler.h  BaseLayer.h  BaseParser.C  BaseParser.h  BasicServer.C  BasicServer.h  BondLayer.C  BondLayer.h  BoundingBoxDialog.C  BoundingBoxDialog.ui  BuildAtomHandler.C  BuildAtomHandler.h  BuildEFPFragmentHandler.C  BuildEFPFragmentHandler.h  BuildFunctionalGroupHandler.C  BuildFunctionalGroupHandler.h  BuildHandler.C  BuildHandler.h  BuildMoleculeFragmentHandler.C  BuildMoleculeFragmentHandler.h  CMakeLists.txt  ChargeLayer.C  (+249 more)
src/Configurator/: AxesConfigurator.C  AxesConfigurator.h  AxesConfigurator.ui  AxesMeshConfigurator.C  AxesMeshConfigurator.h  AxesMeshConfigurator.ui  BackgroundConfigurator.C  BackgroundConfigurator.h  BackgroundConfigurator.ui  ClippingPlaneConfigurator.C  ClippingPlaneConfigurator.h  ClippingPlaneConfigurator.ui  Configurator.h  Configurator.pro  ConstraintConfigurator.C  ConstraintConfigurator.h  CubeDataConfigurator.C  CubeDataConfigurator.h  CubeDataConfigurator.ui  DipoleConfigurator.C  DipoleConfigurator.h  DipoleConfigurator.ui  EfpFragmentListConfigurator.C  EfpFragmentListConfigurator.h  EfpFragmentListConfigurator.ui  ExcitedStatesConfigurator.C  ExcitedStatesConfigurator.h  ExcitedStatesConfigurator.ui  FileConfigurator.C  FileConfigurator.h  FileConfigurator.ui  FrequenciesConfigurator.C  FrequenciesConfigurator.h  FrequenciesConfigurator.ui  GeminalOrbitalsConfigurator.C  GeminalOrbitalsConfigurator.h  GeminalOrbitalsConfigurator.ui  GeometryListConfigurator.C  GeometryListConfigurator.h  GeometryListConfigurator.ui  (+36 more)
src/Data/: Atom.C  Atom.h  AtomicProperty.C  AtomicProperty.h  Bank.C  Bank.h  CanonicalOrbitals.C  CanonicalOrbitals.h  Charge.C  Charge.h  ChargeMultiplicity.C  ChargeMultiplicity.h  Constraint.C  Constraint.h  CubeData.h  Data.C  Data.h  Data.pri  Data.pro  DataFactory.C  DataFactory.h  DataList.h  Density.C  Density.h  DipoleMoment.h  DysonOrbitals.C  DysonOrbitals.h  EfpFragment.C  EfpFragment.h  EfpFragmentLibrary.C  EfpFragmentLibrary.h  ElectronicTransition.C  ElectronicTransition.h  Energy.C  Energy.h  ExcitedStates.C  ExcitedStates.h  File.C  File.h  Frequencies.C  (+70 more)
src/GL2PS/: GL2PS.pri
src/Grid/: BasisEvaluator.C  BasisEvaluator.h  BoundingBoxDialog.h  DensityEvaluator.C  DensityEvaluator.h  Grid.pro  GridEvaluator.C  GridEvaluator.h  GridInfoDialog.C  GridInfoDialog.h  GridInfoDialog.ui  GridProduct.C  GridProduct.h  Lebedev.C  Lebedev.h  MarchingCubes.C  MarchingCubes.h  MarchingCubesData.h  MeshDecimator.C  MeshDecimator.h  MolecularGridEvaluator.C  MolecularGridEvaluator.h  OrbitalEvaluator.C  OrbitalEvaluator.h  Spline.h  SurfaceGenerator.C  SurfaceGenerator.h
src/IQmol/: .MoleculeLayer.C.swp  .MoleculeLayer.h.swp  .ServerTask.C.swp  .ServerTask.h.swp  Animator.C  Animator.h  AtomLayer.C  AtomLayer.h  AtomicDensity.C  AtomicDensity.h  AxesLayer.h  AxesMeshConfigurator.C  AxesMeshConfigurator.h  AxesMeshLayer.C  BackgroundConfigurator.C  BackgroundConfigurator.h  BackgroundLayer.C  BaseParser.C  BaseParser.h  BasicServer.C  BuildAtomHandler.C  BuildEfpFragmentHandler.C  BuildEfpFragmentHandler.h  BuildFunctionalGroupHandler.C  BuildHandler.h  BuildMoleculeFragmentHandler.C  ChargeLayer.C  ChargeLayer.h  ColorGrid.C  ColorGrid.h  ConstraintConfigurator.h  ContainerLayer.h  GLShape.C  Gradient.h  GradientDialog.ui  GridEvaluator.h  GridInfoDialog.C  GridInfoDialog.h  GridInfoDialog.ui  HelpBrowser.C  (+93 more)
src/Layer/: AtomLayer.C  AtomLayer.h  AxesLayer.C  AxesLayer.h  AxesMeshLayer.C  AxesMeshLayer.h  BackgroundLayer.C  BackgroundLayer.h  BondLayer.C  BondLayer.h  CanonicalOrbitalsLayer.C  CanonicalOrbitalsLayer.h  ChargeLayer.C  ChargeLayer.h  ClippingPlaneLayer.C  ClippingPlaneLayer.h  ConstraintLayer.C  ConstraintLayer.h  ContainerLayer.C  ContainerLayer.h  CubeDataLayer.C  CubeDataLayer.h  DipoleLayer.C  DipoleLayer.h  DysonOrbitalsLayer.C  DysonOrbitalsLayer.h  EfpFragmentLayer.C  EfpFragmentLayer.h  EfpFragmentListLayer.C  EfpFragmentListLayer.h  ExcitedStatesLayer.C  ExcitedStatesLayer.h  FileLayer.C  FileLayer.h  FrequenciesLayer.C  FrequenciesLayer.h  GLObjectLayer.h  GeminalOrbitalsLayer.C  GeminalOrbitalsLayer.h  GeometryLayer.C  (+38 more)
src/Main/: AboutDialog.C  AboutDialog.h  AboutDialog.ui  CameraDialog.C  CameraDialog.h  CameraDialog.ui  FragmentTable.C  FragmentTable.h  HelpBrowser.C  HelpBrowser.h  HelpBrowser.ui  IQmol.C  IQmol.h  IQmol.qrc  IQmolApplication.C  IQmolApplication.h  InsertMoleculeDialog.C  InsertMoleculeDialog.h  InsertMoleculeDialog.ui  Main.pro  MainWindow.C  MainWindow.h  Makefile  PeriodicTable.C  PeriodicTable.h  PeriodicTable.ui  PeriodicTableMac.ui  PovRayGen.C  PovRayGen.h  PreferencesBrowser.C  PreferencesBrowser.h  PreferencesBrowser.ui  ToolBar.C  ToolBar.h  ToolBar.ui  Version.h  Viewer.C  Viewer.h  ViewerModel.C  ViewerModel.h  (+5 more)
src/Network/: Connection.C  Connection.h  HttpConnection.C  HttpConnection.h  HttpReply.C  HttpReply.h  LocalConnection.C  LocalConnection.h  LocalReply.C  LocalReply.h  LocalSession.h  Makefile  Network.C  Network.h  Network.pri  Network.pro  NetworkException.h  QueueSystem.h  Reply.h  ServerConfiguration.C  ServerConfiguration.h  ServerConfigurationDialog.C  ServerConfigurationDialog.h  ServerConfigurationDialog.ui  Session.C  Session.h  SshConnection.C  SshConnection.h  SshReply.C  SshReply.h  Transaction.h
src/Old/: Animator.C  Animator.h  AtomicDensity.C  AtomicDensity.h  AtomicDensityData.h  BasicServer.C  BasicServer.h  BoundingBoxDialog.C  BoundingBoxDialog.h  BuildAtomHandler.C  BuildAtomHandler.h  BuildEfpFragmentHandler.C  BuildFunctionalGroupHandler.C  GLShape.h  (+87 more)
(+1306 files in other folders)
